--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,109 @@
-.App {
+.app {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-float infinite 3s ease-in-out;
-  }
-}
-
-.App-header {
+  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
+  color: white;
 }
 
-.App-link {
-  color: rgb(112, 76, 182);
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-@keyframes App-logo-float {
-  0% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(10px);
-  }
-  100% {
-    transform: translateY(0px);
-  }
+.form input {
+  margin: 10px;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  width: 300px;
+}
+
+.form button {
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  width: 300px;
+  background-color: #abbfc5;
+  color: #282c34;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.chat-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start; /* Align messages to the left */
+  border-radius: 5px;
+  padding: 10px;
+  width: 40%;
+}
+
+/* Style for the chat message container */
+.chat-message-outgoing {
+  align-self: flex-end; /* Align to the right */
+  background-color: #0084ff; /* Change the color for outgoing messages */
+  color: white; /* Text color for outgoing messages */
+  position: relative; /* Add relative positioning for timestamp placement */
+  border-radius: 10px;
+  margin: 5px;
+  max-width: 45%;
+}
+
+.chat-message-incoming {
+  align-self: flex-start; /* Align to the left */
+  background-color: #44bb44; /* Change the color for incoming messages */
+  color: white; /* Text color for incoming messages */
+  position: relative; /* Add relative positioning for timestamp placement */
+  border-radius: 10px;
+  margin: 5px;
+  max-width: 45%;
+}
+
+/* Style for the chat message content */
+.chat-bubble-outgoing,
+.chat-bubble-incoming {
+  padding: 10px;
+  border-radius: 10px;
+  word-wrap: break-word; /* Wrap long messages */
+  position: relative; /* Add relative positioning for timestamp placement */
+}
+
+/* Style for the timestamp */
+.chat-time {
+  position: absolute;
+  bottom: 2px; /* Adjust the vertical position */
+  right: 5px; /* Adjust the horizontal position */
+  font-size: 10px; /* Set the font size for the timestamp */
+  color: #ececec; /* Choose a color for the timestamp */
+}
+
+.chat-header {
+  font-weight: bold;
+  font-size: 12px;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+}
+
+.chat-username {
+  font-weight: bold;
+  margin: 7px;
+}
+
+.chat-text {
+  margin-top: 5px;
+  margin-bottom: 5px;
+  font-size: 17px;
+}
+
+/* Style for the chat input form */
+.form {
+  margin-top: 20px; /* Add some space between messages and the input form */
 }
